# tradelab-python

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  mcp.md  safety.md
docs/superpowers/plans/: 2026-07-14-cli-live-parity.md
examples/: backtest_csv.py  paper_session.py  yahoo_walk_forward.py
scripts/: audit_network_calls.py  generate_parity_fixtures.mjs
src/tradelab/: __init__.py  cli.py  errors.py  models.py
src/tradelab/brokers/: __init__.py  alpaca.py  base.py  binance.py  coinbase.py  interactive_brokers.py
src/tradelab/data/: __init__.py  cache.py  csv.py  facade.py  yahoo.py
src/tradelab/engine/: __init__.py  async_signal.py  backtest.py  backtest_async.py  backtest_ticks.py  execution.py  financing.py  grid.py  optimize.py  portfolio.py  signal.py  walk_forward.py
src/tradelab/live/: __init__.py  broker.py  candle.py  clock.py  dashboard.py  engine.py  events.py  logger.py  notify.py  orchestrator.py  paper.py  risk.py  session.py  state.py  storage.py
src/tradelab/mcp/: __init__.py  schemas.py  server.py  tools.py
src/tradelab/metrics/: __init__.py  analytics.py  annualize.py  benchmark.py  build.py  finite.py
src/tradelab/reporting/: __init__.py  _io.py  exports.py  html.py  summary.py
src/tradelab/research/: __init__.py  combinations.py  cpcv.py  deflated_sharpe.py  monte_carlo.py  pbo.py  stats.py  store.py
src/tradelab/strategies/: __init__.py  builtins.py  registry.py
src/tradelab/ta/: __init__.py  channels.py  oscillators.py  trend.py
src/tradelab/utils/: __init__.py  indicators.py  position_sizing.py  random.py  time.py
tests/e2e/: test_installed_package.py
tests/parity/: conftest.py  test_advanced_engine_parity.py  test_backtest_parity.py  test_fixture_schema.py  test_metrics_parity.py  test_portfolio_parity.py  test_research_parity.py  test_ta_parity.py
tests/parity/fixtures/: backtest.json  financing.json  manifest.json  metrics.json  portfolio.json  (+4 more)
tests/unit/: test_cli.py  test_models.py  test_package_metadata.py  test_public_api.py
(+46 files in other folders)
